--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body onload="startGame()">
 	<div id="score"></div>
+	<canvas id="screen"></canvas>
 	<script src="snake.js"></script>
 </body>
 
