--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<div id="score"></div>
 	<canvas id="screen"></canvas>
 	<script src="snake.js"></script>
+	<div id="menu"></div>
 </body>
 
 </html>
