--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body onload="startGame()">
+	<div id="maxScore"></div>
 	<div id="score"></div>
 	<canvas id="screen"></canvas>
 	<script src="snake.js"></script>
