algoritmo com calculo de distancia otimizado

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body onload="startGame()">
 	<div id="maxScore"></div>
 	<div id="score"></div>
+	<div id="steps"></div>
+	<div id="minSteps"></div>
 	<canvas id="screen"></canvas>
 	<script src="snake.js"></script>
 	<div id="menu"></div>
